syntax = "proto3";

package role;

// "directory/;package_name"
option go_package = "/;role";

service RoleService {
  rpc Add (AddRequest) returns (UUID);
  rpc Update (UpdateRequest) returns (Empty);
  rpc Remove (RemoveRequest) returns (Empty);

  rpc GetById (GetByIdRequest) returns (Role);
}

message AddRequest {
  string name = 1;
  string scopes = 2;
}

message UpdateRequest {
  string role_id = 1;
  string name = 2;
  string scopes = 3;
}

message RemoveRequest {
  string role_id = 1;
}



message GetByIdRequest {
  string role_id = 1;
}


// Responses
message UUID {
  string value = 1;
}

message Empty {
}

message Role {
  string id = 1;
  string name = 2;
  string scopes = 4;
  int64 created_at = 5;
  int64 updated_at = 6;
}

message Roles {
  repeated Role roles = 1;
}